The builder-rollup script is working

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "build": "lerna run build"
+  },
   "workspaces": [
     "packages/*",
     "packages/components/*"
