--- a/package.json
+++ b/package.json
@@ -4,19 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "lerna run build",
+    "clean": "rm -rf dist",
+    "purge": "rm -rf node_modules",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "scripts": {
-    "build": "lerna run build"
-  },
   "workspaces": [
     "packages/*",
     "packages/components/*"
   ],
   "devDependencies": {
-    "lerna": "^6.4.1"
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack4": "^6.5.16",
+    "@storybook/manager-webpack4": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
+    "babel-loader": "^8.3.0",
+    "lerna": "^6.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
