--- a/packages/builder-rollup/package.json
+++ b/packages/builder-rollup/package.json
@@ -20,6 +20,7 @@
     "access": "public"
   },
   "scripts": {
+    "purge": "rm -rf node_modules",
     "test": "node ./__tests__/@glassball/builder-rollup.test.js"
   },
   "dependencies": {
