--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -18,6 +18,8 @@
   },
   "scripts": {
     "build": "builder-rollup",
+    "clean": "rm -rf dist",
+    "purge": "rm -rf node_modules",
     "test": "node ./__tests__/@glassball/button.test.js"
   },
   "devDependencies": {
