--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "lerna run build",
-    "clean": "rm -rf dist",
-    "purge": "rm -rf node_modules",
+    "clean": "lerna run clean",
+    "purge": "lerna run purge",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
