--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
   "license": "ISC",
-  "main": "lib/button.js",
+  "main": "dist/button.cjs.js",
+  "module": "dist/button.esm.js",
+  "src": "lib/button.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
