--- a/packages/components/text/package.json
+++ b/packages/components/text/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
   "license": "ISC",
-  "main": "lib/text.js",
+  "main": "dist/text.cjs.js",
+  "module": "dist/text.esm.js",
+  "src": "lib/text.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
