Created sample-app-basic but we are pausing its compilation as our builder-rollup is set for libraries

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "workspaces": [
     "packages/*",
-    "packages/components/*"
+    "packages/components/*",
+    "packages/apps/*"
   ],
   "devDependencies": {
     "@babel/core": "^7.20.12",
