--- a/packages/builder-rollup/package.json
+++ b/packages/builder-rollup/package.json
@@ -32,5 +32,8 @@
     "postcss": "^8.4.21",
     "rollup": "^3.12.1",
     "rollup-plugin-postcss": "^4.0.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1"
   }
 }
