Fixed the storybook with Basic Table

--- a/packages/components/table/package.json
+++ b/packages/components/table/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@glassball/simple-table",
-  "version": "0.0.28",
+  "name": "@glassball/table",
+  "version": "0.0.30",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
   "license": "ISC",
   "main": "dist/simple-table.cjs.js",
   "module": "dist/simple-table.esm.js",
-  "src": "lib/simple-table.js",
+  "src": "./index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
