Updated the library name

--- a/packages/components/table/package.json
+++ b/packages/components/table/package.json
@@ -5,8 +5,8 @@
   "keywords": [],
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
   "license": "ISC",
-  "main": "dist/simple-table.cjs.js",
-  "module": "dist/simple-table.esm.js",
+  "main": "dist/table.cjs.js",
+  "module": "dist/table.esm.js",
   "src": "./index.js",
   "directories": {
     "lib": "lib",
