--- a/packages/components/table/package.json
+++ b/packages/components/table/package.json
@@ -26,7 +26,7 @@
     "build": "builder-rollup",
     "clean": "rm -rf dist",
     "purge": "rm -rf node_modules",
-    "test": "node ./__tests__/@glassball/simple-table.test.js"
+    "test": "node ./__tests__/@glassball/table.test.js"
   },
   "bugs": {
     "url": "https://github.com/neeraj76/react-library-launchpad/issues"
