Fixed the dependencies problems

--- a/packages/builder-rollup/package.json
+++ b/packages/builder-rollup/package.json
@@ -34,6 +34,8 @@
     "rollup-plugin-postcss": "^4.0.2"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1"
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "rollup-plugin-node-externals": "^5.1.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   }
 }
