--- a/packages/builder-rollup/package.json
+++ b/packages/builder-rollup/package.json
@@ -29,13 +29,12 @@
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-commonjs": "^24.0.1",
     "postcss": "^8.4.21",
     "rollup": "^3.12.1",
-    "rollup-plugin-postcss": "^4.0.2"
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-node-externals": "^5.1.2"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "rollup-plugin-node-externals": "^5.1.2",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
   }
 }
