--- a/packages/apps/sample-app/package.json
+++ b/packages/apps/sample-app/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "@glassball/builder-rollup",
+  "name": "sample-app",
   "version": "0.0.26",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
   "license": "ISC",
-  "bin": {
-    "builder-rollup": "src/builder-rollup.js",
-    "builder-rollup-app": "src/builder-rollup-app.js"
-  },
-  "main": "src/builder-rollup.js",
+  "main": "src/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -17,25 +13,28 @@
   "files": [
     "lib"
   ],
-  "publishConfig": {
-    "access": "public"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/neeraj76/react-library-launchpad.git"
   },
   "scripts": {
-    "purge": "rm -rf node_modules",
-    "test": "node ./__tests__/@glassball/builder-rollup.test.js"
+    "start": "rollup -c rollup.config.mjs -w",
+    "test": "node ./__tests__/sample-app.test.js"
   },
-  "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
+  "bugs": {
+    "url": "https://github.com/neeraj76/react-library-launchpad/issues"
+  },
+  "homepage": "https://github.com/neeraj76/react-library-launchpad#readme",
+  "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-commonjs": "^24.0.1",
-    "postcss": "^8.4.21",
-    "rollup": "^3.12.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-node-externals": "^5.1.2"
-  },
-  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup": "^3.13.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-serve": "^2.0.2"
   }
 }
