--- a/packages/apps/sample-app/package.json
+++ b/packages/apps/sample-app/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "rollup -c rollup.config.mjs -w",
+    "build": "rollup -c rollup.config.mjs",
     "test": "node ./__tests__/sample-app.test.js"
   },
   "bugs": {
