--- a/packages/apps/sample-app/package.json
+++ b/packages/apps/sample-app/package.json
@@ -28,9 +28,11 @@
   },
   "homepage": "https://github.com/neeraj76/react-library-launchpad#readme",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
     "http-server": "^14.1.1",
@@ -39,5 +41,8 @@
     "rollup": "^3.13.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^2.0.2"
+  },
+  "dependencies": {
+    "@glassball/table": "^0.1.3"
   }
 }
