--- a/packages/components/table/package.json
+++ b/packages/components/table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glassball/table",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
@@ -8,6 +8,7 @@
   "main": "dist/table.cjs.js",
   "module": "dist/table.esm.js",
   "src": "./index.js",
+  "external": ["lib/feature/table-column-resizer.css"],
   "directories": {
     "lib": "lib",
     "test": "__tests__"
