--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "workspaces": [
     "packages/*",
     "packages/components/*",
+    "packages/modules/*",
     "packages/apps/*"
   ],
   "devDependencies": {
