--- a/packages/components/read-excel/package.json
+++ b/packages/components/read-excel/package.json
@@ -5,13 +5,15 @@
   "keywords": [],
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
   "license": "ISC",
+  "main": "dist/read-excel.cjs.js",
+  "module": "dist/read-excel.esm.js",
   "src": "./index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
