--- a/packages/builder-rollup/package.json
+++ b/packages/builder-rollup/package.json
@@ -6,8 +6,7 @@
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
   "license": "ISC",
   "bin": {
-    "builder-rollup": "src/builder-rollup.js",
-    "builder-rollup-dev": "src/builder-rollup-dev.js"
+    "builder-rollup": "src/builder-rollup.js"
   },
   "main": "src/builder-rollup.js",
   "directories": {
@@ -29,13 +28,12 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "postcss": "^8.4.21",
     "rollup": "^3.12.1",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-node-externals": "^5.1.2"
-  },
-  "devDependencies": {
+    "rollup-plugin-node-externals": "^5.1.2",
+    "rollup-plugin-postcss": "^4.0.2"
   }
 }
