--- a/packages/modules/tally/package.json
+++ b/packages/modules/tally/package.json
@@ -30,6 +30,8 @@
   },
   "homepage": "https://github.com/neeraj76/react-library-launchpad#readme",
   "dependencies": {
+    "@glassball/xml": "^0.0.5",
+    "axios": "^1.3.2",
     "date-fns": "^2.29.3"
   }
 }
