--- a/packages/modules/tally/package.json
+++ b/packages/modules/tally/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glassball/tally",
-  "version": "0.0.15",
+  "version": "0.0.17",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Neeraj Gupta <neerajgupta.mbox@gmail.com>",
@@ -29,14 +29,13 @@
     "url": "https://github.com/neeraj76/react-library-launchpad/issues"
   },
   "homepage": "https://github.com/neeraj76/react-library-launchpad#readme",
-  "dependencies": {
-    "@glassball/xml": "^0.0.5"
-  },
   "devDependencies": {
+    "@glassball/xml": "^0.0.5",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3"
   },
   "peerDependencies": {
+    "@glassball/xml": "^0.0.5",
     "axios": "^1.3.x",
     "date-fns": "^2.29.x"
   }
