--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "workspaces": [
-    "packages/*",
+    "packages/builders/*",
     "packages/components/*",
     "packages/modules/*",
     "packages/apps/*"
@@ -33,6 +33,7 @@
     "babel-loader": "^8.3.0",
     "lerna": "^6.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-table": "^7.8.0"
   }
 }
