Added support for srcType in package.json to indicate if commonjs code is preset

--- a/packages/modules/tally/package.json
+++ b/packages/modules/tally/package.json
@@ -8,6 +8,7 @@
   "main": "dist/tally.cjs.js",
   "module": "dist/tally.esm.js",
   "src": "./index.js",
+  "srcType": ["cjs"],
   "directories": {
     "lib": "lib",
     "test": "__tests__"
